<resources>
    <string name="app_name">MedPlanner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Please wait...</string>
    <string name="please_wait">Please wait...</string>
    <string name="success">Success</string>
    <string name="oops">Oops!</string>
    <string name="title_activity_main">ActivityMain</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="docotr_name">Doctor name</string>
    <string name="profile">Profile</string>
    <string name="awareness">Awareness</string>
    <string name="setting">Settings</string>
    <string name="dependent">Dependent</string>
    <string name="queue">Queue</string>
    <string name="emr_and_tracker">EHR</string>
    <string name="notification">Notification</string>
    <string name="tatab_app">TatabApp</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="need_help">Need Help?</string>
    <string name="create_account">Create Account</string>
    <string name="create_a_doctor_account">Create a doctor account</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mobile">966-5XXXXXXXX</string>
    <string name="email">Email</string>
    <string name="continue_tv">continue</string>
    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="enter_valid_mail">Enter valid mail id</string>
    <string name="enter_password">Enter password</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="personal_info">Personal information</string>
    <string name="nationalaty">Nationality</string>
    <string name="id_card_passport">ID Card/Passport</string>
    <string name="home_location">Home Location</string>
    <string name="workplace">Workplace</string>
    <string name="residance">Residence</string>
    <string name="cv">cv</string>
    <string name="speciality">Speciality</string>
    <string name="current_grade">Current Grade</string>
    <string name="subspecility">SubSpeciality</string>
    <string name="classification">Classification</string>
    <string name="add_experience">Add Experience</string>
    <string name="since">Since</string>
    <string name="to">To</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="working_since">Working Since</string>
    <string name="confirm_add">Confirm Add</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment">Payment</string>
    <string name="iban">IBAN</string>
    <string name="confirm_iban">Confirm IBAN</string>
    <string name="photoUpload">Photo upload</string>
    <string name="name">Name</string>
    <string name="personal_details">Personal Details</string>
    <string name="city">City</string>
    <string name="add_dependents">Add Dependents</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="relationship">Relationship</string>
    <string name="bithdate">Birthday</string>
    <string name="done">Done</string>
    <string name="gender">Gender</string>
    <string name="first_name_required">We need a Name</string>
    <string name="hospital_name_required">We need a Hospital Name</string>
    <string name="working_since_required">Working since required</string>
    <string name="first_name_should_be_more_then_3_character">First Name should be 3-20 alphabets only, no special characters</string>
    <string name="name_could_not_starts_with_dot">Name cannot start with a dot</string>
    <string name="email_is_required">We need an Email ID</string>
    <string name="please_enter_valid_email">Oops! It seems your email is not match with email format.</string>
    <string name="mobile_no_is_required">Incorrect mobile number. The correct number should be 9665xxxxxxxx </string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="number_strts_with_zero">Mobile Number should be 10 digits, not starting with \'0\'</string>
    <string name="password_should_be_8_12_characters_with_at_least_1_nummeric">Password must contain at least 8-16 characters, including UPPER/LOWERCASE, special symbols and numbers</string>
    <string name="password_required">Password length should be between 8-16 characters</string>
    <string name="select_city">Select city</string>
    <string name="please_enter_relationship">Please enter relationship</string>
    <string name="please_enter_date_of_birth">Please enter Date of Birth</string>
    <string name="please_enter_city">Please select city</string>
    <string name="please_add_atleast_one_depandent">Please add atleast one dependent</string>
    <string name="family_and_community">Family and Community</string>
    <string name="psychological">Psychological</string>
    <string name="abdominal">Abodminal</string>
    <string name="obgyne">Obgyne</string>
    <string name="pediatrics">Pediatrics</string>
    <string name="specialist">Specialist</string>
    <string name="counseltant">Counseltant</string>
    <string name="select_from_gallary">Select photo from gallery</string>
    <string name="select_from_camera">Capture photo from camera</string>
    <string name="network_error">Network error. Please try after some time.</string>
    <string name="please_connect_to_the_internet">Please connet to the internet first.</string>
    <string name="health_tracker">Health Tracker</string>
    <string name="emr_tracker">EHR</string>
    <string name="Consultation">Consultation</string>
    <string name="emr">EHR</string>
    <string name="birthdate">BirthDate</string>
    <string name="weight">weight</string>
    <string name="height">Height</string>
    <string name="chornic">Chronic</string>
    <string name="weight_report">Weight Report</string>
    <string name="fever_report">Fever Report</string>
    <string name="blood_pressor_report">Blood Pressure Report</string>
    <string name="blood_suger_report">Blood Sugar Report</string>
    <string name="name_required">We need a Name</string>
    <string name="nationility_required">We need a Nationality</string>
    <string name="residance_required">We need a Residence</string>
    <string name="workPlace_required">We need a WorkPlace</string>
    <string name="homeLocation_required">We need a HomeLocation</string>
    <string name="idcard_required">We need a IdCard</string>
    <string name="speciality_required">We need a Speciality</string>
    <string name="currentGrade_required">We need a Current Grade</string>
    <string name="subSpeciality_required">We need a Sub Speciality</string>
    <string name="classification_required">We need a Classification</string>
    <string name="Iban_required">We need a Iban</string>
    <string name="iban_mismatch">Iban Mismatch</string>
    <string name="select_image">Please select a image</string>
    <string name="name_should_be_more_then_3_character">Name should be 3-30 alphabets only, no special characters</string>
    <string name="require_add_experience">Please add an experience</string>
    <string name="logout">LOG OUT</string>
    <string name="manage_queue">Manage Queue</string>
    <string name="manage_awareness_content">Manage Awareness Content</string>
    <string name="case_history">Case History</string>
    <string name="choose_patient">Choose Patient</string>
    <string name="doc_profile">Doctor Profile</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="choose_dependent">Choose Dependent</string>
    <string name="main_profile">Main Profile</string>
    <string name="post_should_not_be_empty">Post should not be empty</string>
    <string name="date">Date</string>
    <string name="details">Details</string>
    <string name="prescription">Prescription</string>
    <string name="follow_up">Follow Up</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="no_data">No Data</string>
    <string name="dr">Dr.</string>
    <string name="temp_report">Temperature Report</string>
    <string name="from">From</string>
    <string name="alert">Alert</string>
    <string name="temprature">Temprature</string>
    <string name="refresh_graph">Refresh Graph</string>
    <string name="hr">HR</string>
    <string name="dia">DIA</string>
    <string name="sys">SYS</string>
    <string name="pre">pre</string>
    <string name="post">post</string>
    <string name="sleep">sleep</string>
    <string name="medical_consultation">Medical Consultation</string>
    <string name="consultation_screen">Consultation</string>
    <string name="manage_dependents">Manage Dependents</string>
    <string name="electronic_medical_report">Electronic Medical Records</string>
    <string name="medical_report">Medical Records</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="cancel">Cancel</string>
    <string name="logout_sure">Are you sure you want to Logout?</string>
    <string name="logout_success"> Logout successfully</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="delete_sure">Are you sure you want to delete it?</string>
    <string name="clinic">" Clinic"</string>
    <string name="today_blood_suger">Today\'s Blood Suger</string>
    <string name="normal_range">Normal Range</string>
    <string name="timings">Timing</string>
    <string name="reading_mg">Reading Mg/dl</string>
    <string name="comments">comments...</string>
    <string name="type_comments">Type your comment here</string>
    <string name="please_add_detail">Please enter valid details</string>
    <string name="comment">Comments</string>
    <string name="submit">Submit</string>
    <string name="today_weight">Today\'s weight and HR</string>
    <string name="weight_in_kg">Weight in KG</string>
    <string name="rest_hr">Rest HR</string>
    <string name="height_in_cm">Height in CM</string>
    <string name="normal_weight">Normal weight 18.5-24.9</string>
    <string name="over_weight">over weight 25-29.9</string>
    <string name="obesity">Obesity Bmi>30></string>
    <string name="under_weight"><![CDATA[Under weight  Bmi<18.5]]></string>
    <string name="C">oC</string>
    <string name="today_temp">Today\'s Temprature</string>
    <string name="very_hot_er">Degree symbol in XML\\nTemperature is 34.5\\u00B0</string>
    <string name="today_blood_pressure">Today\'s heart rate and blood pressure</string>
    <string name="medical_emergency_sys">Medical Emergency\n>180</string>
    <string name="high_bp_stage_2_sys">High BP Stage 2\n>140</string>
    <string name="high_bp_stage_1_sys">High BP Stage 1\n130-139</string>
    <string name="search">Search</string>
    <string name="psycological">Psycological</string>
    <string name="abodminal">Abodminal</string>
    <string name="pediatric">Pediatric</string>
    <string name="send">Send</string>
    <string name="customDigits">\u0022;\u005C;&amp;&lt;&gt;&#92; abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!#$%\'()*+,-./:;=?@[]_`{};|~^"*"</string>
    <string name="tech_support_request">Technical Support Request</string>
    <string name="problem_type">Problem Type</string>
    <string name="problem_title">Problem Title</string>
    <string name="problem_desc">Problem description</string>
</resources>