<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.hakeem.fragment.FragmentEMR">

   <TextView
            android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/emr"
        android:textColor="@color/blue"
        android:textSize="25sp" />

    <LinearLayout
        android:weightSum="6"
        android:orientation="horizontal"
        android:background="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="30dp">

       <TextView
            android:maxLines="2"
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="10sp" />
       <TextView
            android:maxLines="2"
            android:id="@+id/tvDoctor"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/doctor"
            android:textColor="@color/white"
            android:textSize="10sp" />
       <TextView
            android:maxLines="2"
            android:id="@+id/tvDetails"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="10sp" />
       <TextView
            android:id="@+id/tvPrescription"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:layout_height="wrap_content"
            android:text="@string/prescription"
            android:textColor="@color/white"
            android:textSize="10sp" />
       <TextView
            android:maxLines="2"
            android:id="@+id/tvFollowUp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"

            android:layout_height="wrap_content"
            android:text="@string/follow_up"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </LinearLayout>
    <TextView
        android:maxLines="1"
        android:id="@+id/tvNoData"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="match_parent"
        android:text="@string/no_data"
        android:layout_centerInParent="true"
        android:textColor="@color/blue"
        android:visibility="gone"
        android:textSize="14sp" />
    <ListView
        android:id="@+id/tvEmr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>
