<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern"
    tools:context="com.app.hakeem.fragment.FragmentDoctorRegistrationStep1">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/step_3" />

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="60dp"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:textColor="@color/green"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/cv"
                android:background="@drawable/rounded_white"
                android:layout_height="40dp"
                />
            <EditText
                android:layout_marginTop="20dp"
                android:id="@+id/etSpeciality"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="60dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_red_blue_corner"
                android:drawableRight="@drawable/icon_drop_down"
                android:drawablePadding="20dp"
                android:hint="@string/speciality"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_off" />


            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/etCurrentGrade"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="60dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_red_blue_corner"
                android:drawableRight="@drawable/icon_drop_down"
                android:drawablePadding="20dp"
                android:hint="@string/current_grade"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_off" />
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/etSubSpeciality"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_red_blue_corner"
                android:drawableLeft="@drawable/icon_name"
                android:drawablePadding="20dp"
                android:hint="@string/subspecility"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_off" />
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/etClassification"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_red_blue_corner"
                android:drawableLeft="@drawable/icon_name"
                android:drawablePadding="20dp"
                android:hint="@string/classification"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white_off" />
            <Button
                android:id="@+id/btnAddExperiance"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:minWidth="150dp"
                android:textColor="@color/color_selector"
                android:textAlignment="center"
                android:textSize="14sp"
                android:text="@string/add_experience"
                android:background="@drawable/bg_button"
                android:layout_height="40dp"
                />

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <LinearLayout

                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/linearLayout"
                    android:layout_weight="3"
                    android:background="@color/blue">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/workplace"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:paddingLeft="20dp"
                        android:textColor="@color/white"
                        android:textIsSelectable="false"

                        android:textSize="14sp" />

                    <View
                        android:background="@color/border_color"
                        android:layout_width="1dp"
                        android:layout_height="match_parent" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/since"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <View
                        android:background="@color/border_color"
                        android:layout_width="1dp"
                        android:layout_height="match_parent" />


                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="serif"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/to"
                        android:textColor="@color/white"
                        android:textSize="14sp" />


                </LinearLayout>

            </RelativeLayout>

            <ListView
                android:background="@color/white"
                android:id="@+id/lvExperiences"
                android:layout_width="match_parent"
                android:layout_height="100dp"></ListView>
            <Button
                android:id="@+id/btnContinue"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:minWidth="150dp"
                android:textColor="@color/color_selector"
                android:textAlignment="center"
                android:textSize="14sp"
                android:text="@string/continue_tv"
                android:background="@drawable/bg_button"
                android:layout_height="40dp"
                />
            <TextView
                android:id="@+id/tvTerm_and_condition"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:minWidth="150dp"
                android:textColor="@color/color_selector"
                android:textAlignment="center"
                android:textSize="14sp"
                android:text="@string/terms_and_condition"
                android:background="@drawable/rounded_white"
                android:layout_height="40dp"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
